name:                tce-game
version:             1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2008-2015 Dino Morelli
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable dice
   main-is:          dice.hs
   -- other-modules:       
   -- other-extensions:    
   build-depends:      base >=4.7 && <4.8
                     , random >=1.1 && <1.2
   hs-source-dirs:   src
   default-language: Haskell2010
   ghc-options:      -Wall

library
   exposed-modules:  TCE.Game.Dice
                     TCE.Game.RPG.Fudge.Action
                     TCE.Game.RPG.Fudge.Character
                     TCE.Game.RPG.Fudge.Dice
                     TCE.Game.RPG.Fudge.Skill
                     TCE.Game.RPG.Fudge.Trait
   build-depends:      base >=4.7 && <4.8
                     , random >=1.1 && <1.2
   hs-source-dirs:   src
   default-language: Haskell2010
   ghc-options:      -Wall
