name:                tce-game
version:             1.0
cabal-version:       >=1.10
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2008-2015 Dino Morelli
author:              Dino Morelli
maintainer:          dino@ui3.info
stability:           experimental
homepage:            https://github.com/dino-/tce-game
synopsis:            Game mechanics library
description:         A library containing various game development types and functions. Includes some dice-simulating functions and also some functionality from the Fudge RPG system.
category:            Game
extra-source-files:  README.md

executable dice
   main-is:          dice.hs
   build-depends:      base >= 3 && < 5
                     , random
   hs-source-dirs:   src
   default-language: Haskell2010
   ghc-options:      -Wall

library
   exposed-modules:  TCE.Game.Dice
                     TCE.Game.RPG.Fudge.Action
                     TCE.Game.RPG.Fudge.Character
                     TCE.Game.RPG.Fudge.Dice
                     TCE.Game.RPG.Fudge.Skill
                     TCE.Game.RPG.Fudge.Trait
   build-depends:      base >= 3 && < 5
                     , random
   hs-source-dirs:   src
   default-language: Haskell2010
   ghc-options:      -Wall
